Ready clean HTML

--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="ChikanoRou, Art-House, Stashh, stashh, secretnft, secretnfts, secret nfts, secret nft, nft, nfts, privacy, private content, smashed store, secret dao, arthouse, images, artwork, collection">
+    <meta name="description" content="ChikanoRou collections NFT">
+
+    <link type="image/x-icon" href="IMG/icon.svg" rel="shortcut icon">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/style.css">
+
     <title> ChikanoRou </title>
 </head>
-<body>
-    
-    Привет-привет-привет уже
+
+<body class="body_hide">
+
+    Hello World
+
+
+    <script src="JS/main.js"></script>
 
 </body>
+
 </html>
