--- a/index.html
+++ b/index.html
@@ -18,8 +18,36 @@
 
 <body class="body_hide">
 
-    Hello World
+    <div class="container">
+       
+        <header class="header">
 
+
+
+        </header>
+
+
+
+
+
+        <footer class="footer">
+
+            <div class="footer__inner">
+
+                <div class="footer__inner sound">
+    
+                <div class="footer__inner-item">
+                    <img class="soundbutton paused" src="IMG/sound.gif" alt="alt">
+                    <audio class="audio" src="AUDIO/music.mp3" loop></audio>
+                </div>
+
+            </div>
+
+        </footer>
+
+    </div>
+
+ 
 
     <script src="JS/main.js"></script>
 
