--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
  
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="JS/main.js"></script>
 
 </body>
