--- a/index.html
+++ b/index.html
@@ -54,36 +54,36 @@
 <div id="carousel">
     <div id="drag-container">
         <div id="spin-container">
-            <a href="https://stashh.io/asset/Art-House/AHW001" target="_blank"><img src="ART/Wishes (1).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW002" target="_blank"><img src="ART/Wishes (2).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW003" target="_blank"><img src="ART/Wishes (3).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW004" target="_blank"><img src="ART/Wishes (4).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW005" target="_blank"><img src="ART/Wishes (5).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW006" target="_blank"><img src="ART/Wishes (6).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW007" target="_blank"><img src="ART/Wishes (7).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW008" target="_blank"><img src="ART/Wishes (8).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW009" target="_blank"><img src="ART/Wishes (9).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW010" target="_blank"><img src="ART/Wishes (10).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW011" target="_blank"><img src="ART/Wishes (11).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW012" target="_blank"><img src="ART/Wishes (12).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW013" target="_blank"><img src="ART/Wishes (13).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW014" target="_blank"><img src="ART/Wishes (14).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW015" target="_blank"><img src="ART/Wishes (15).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW016" target="_blank"><img src="ART/Wishes (16).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW017" target="_blank"><img src="ART/Wishes (17).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW018" target="_blank"><img src="ART/Wishes (18).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW019" target="_blank"><img src="ART/Wishes (19).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW020" target="_blank"><img src="ART/Wishes (20).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW021" target="_blank"><img src="ART/Wishes (21).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW022" target="_blank"><img src="ART/Wishes (22).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW023" target="_blank"><img src="ART/Wishes (23).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW024" target="_blank"><img src="ART/Wishes (24).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW025" target="_blank"><img src="ART/Wishes (25).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW026" target="_blank"><img src="ART/Wishes (26).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW027" target="_blank"><img src="ART/Wishes (27).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW028" target="_blank"><img src="ART/Wishes (28).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW029" target="_blank"><img src="ART/Wishes (29).png" alt=""></a>
-            <a href="https://stashh.io/asset/Art-House/AHW030" target="_blank"><img src="ART/Wishes (30).png" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW001" target="_blank"><img src="ART/Wish (1).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW002" target="_blank"><img src="ART/Wish (2).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW003" target="_blank"><img src="ART/Wish (3).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW004" target="_blank"><img src="ART/Wish (4).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW005" target="_blank"><img src="ART/Wish (5).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW006" target="_blank"><img src="ART/Wish (6).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW007" target="_blank"><img src="ART/Wish (7).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW008" target="_blank"><img src="ART/Wish (8).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW009" target="_blank"><img src="ART/Wish (9).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW010" target="_blank"><img src="ART/Wish (10).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW011" target="_blank"><img src="ART/Wish (11).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW012" target="_blank"><img src="ART/Wish (12).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW013" target="_blank"><img src="ART/Wish (13).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW014" target="_blank"><img src="ART/Wish (14).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW015" target="_blank"><img src="ART/Wish (15).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW016" target="_blank"><img src="ART/Wish (16).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW017" target="_blank"><img src="ART/Wish (17).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW018" target="_blank"><img src="ART/Wish (18).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW019" target="_blank"><img src="ART/Wish (19).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW020" target="_blank"><img src="ART/Wish (20).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW021" target="_blank"><img src="ART/Wish (21).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW022" target="_blank"><img src="ART/Wish (22).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW023" target="_blank"><img src="ART/Wish (23).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW024" target="_blank"><img src="ART/Wish (24).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW025" target="_blank"><img src="ART/Wish (25).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW026" target="_blank"><img src="ART/Wish (26).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW027" target="_blank"><img src="ART/Wish (27).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW028" target="_blank"><img src="ART/Wish (28).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW029" target="_blank"><img src="ART/Wish (29).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/Art-House/AHW030" target="_blank"><img src="ART/Wish (30).jpg" alt=""></a>
             <p>ART HOUSE</p>
         </div>
         <div id="ground"></div>
