--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
     <div class="footer__inner">
 
         <div class="footer__inner-stashh">
-            <a href="https://stashh.io/collection/Art-House"> Wish Room </a> 
-            <img src="IMG/diamond.png" alt="" class="stashh">
+            <a href="https://stashh.io/collection/art-house?traits=%257B%2522Room%2522%253A%255B%2522Wishes%2522%255D%257D" target="_blank"> Wish Room <img src="IMG/diamond.png" alt="" class="stashh"> </a> 
+            
         </div>
 
         <div class="footer__inner-twitter">
-            <a href="https://twitter.com/ChikanoRou"> ChikanoRou <img src="IMG/twitter.png" alt="" class="twitter"> </a> 
+            <a href="https://twitter.com/ChikanoRou" target="_blank"> ChikanoRou <img src="IMG/twitter.png" alt="" class="twitter"> </a> 
         </div>
         
 
