--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="footer__inner">
 
         <div class="footer__inner-stashh">
-            <a href="https://stashh.io/collection/art-house?traits=%257B%2522Room%2522%253A%255B%2522Wishes%2522%255D%257D" target="_blank"> Wish Room <img src="IMG/diamond.png" alt="" class="stashh"> </a> 
+            <a href="https://stashh.io/collection/art-house?traits=%257B%2522Room%2522%253A%255B%2522Wish%2522%255D%257D" target="_blank"> Wish Room <img src="IMG/diamond.png" alt="" class="stashh"> </a> 
             
         </div>
 
