--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <a href="https://stashh.io/asset/art-house/AHW027" target="_blank"><img src="ART/Wish (27).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW028" target="_blank"><img src="ART/Wish (28).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW029" target="_blank"><img src="ART/Wish (29).jpg" alt=""></a>
-            <a href="https://stashh.io/asset/art-house/AHW030" target="_blank"><img src="ART/Wish (30).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/art-house/AHW030" target="_blank" style="z-index: 9999;"><img src="ART/Wish (30).jpg" alt=""></a>
             <p>ART HOUSE</p>
         </div>
         <div id="ground"></div>
