--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <a href="https://stashh.io/asset/art-house/AHW023" target="_blank"><img src="ART/Wish (23).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW024" target="_blank"><img src="ART/Wish (24).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW025" target="_blank"><img src="ART/Wish (25).jpg" alt=""></a>
-            <a href="https://stashh.io/asset/art-house/AHW026" target="_blank"><img src="ART/Wish (26).jpg" alt=""></a>
+            <a href="https://stashh.io/asset/art-house/AHW026" class="sold" target="_blank"><img src="ART/Wish (26).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW027" target="_blank"><img src="ART/Wish (27).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW028" target="_blank"><img src="ART/Wish (28).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW029" target="_blank"><img src="ART/Wish (29).jpg" alt=""></a>
