--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/style.css">
     <title>ART HOUSE</title>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 <body class="body_hide">
 
@@ -78,7 +78,11 @@
             <a href="https://stashh.io/asset/art-house/AHW028" target="_blank"><img src="ART/Wish (28).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW029" target="_blank"><img src="ART/Wish (29).jpg" alt=""></a>
             <a href="https://stashh.io/asset/art-house/AHW030" target="_blank" style="z-index: 9999;"><img src="ART/Wish (30).jpg" alt=""></a>
-            <p>ART HOUSE</p>
+            <div class="preloader" id='preloader'>
+                <div class="preloader-ring" id='preloader-ring'> ART HOUSE </div>    
+                <div class="preloader-ring" id='preloader-ring'> WISH ROOM </div>
+            </div>
+            <!-- <p>ART HOUSE</p> -->
         </div>
         <div id="ground"></div>
     </div>
